# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: check_work.yml
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: test_data_for_users.json  users.json
task_manager/labels/: admin.py  forms.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/users/: index.html  user_list.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
